src/pw.zig

pub extern fn bwrm(w: [*c]BW) void;
pub extern fn bwins(w: [*c]BW, l: off_t, n: off_t, flg: c_int) void;
pub extern fn bwdel(w: [*c]BW, l: off_t, n: off_t, flg: c_int) void;
pub extern fn bwgen(w: [*c]BW, linums: c_int, linchg: c_int) void;
pub extern fn bwgenh(w: [*c]BW) void;
pub extern fn bwfllw(w: [*c]W) void;
pub extern fn orphit(bw: [*c]BW) void;
pub extern fn calclincols(bw: [*c]BW) c_int;
pub extern fn get_buffer_in_window(bw: [*c]BW, b: [*c]B) c_int;
pub extern fn pdup(p: [*c]P, where: [*c]const u8) [*c]P;
pub extern fn prm(p: [*c]P) void;
pub extern fn pset(d: [*c]P, s: [*c]P) void;
pub extern fn p_goto_bol(p: [*c]P) void;
pub extern fn pline(p: [*c]P, line: off_t) c_int;
pub extern fn piscol(p: [*c]P) off_t;
pub extern fn piseof(p: [*c]P) c_int;
pub extern fn brch(p: [*c]P) c_int;
pub extern fn borphan() [*c]B;
pub extern fn load_syntax(name: [*c]const u8) [*c]struct_high_syntax;
pub extern fn find_lattr_db(b: [*c]B, y: [*c]struct_high_syntax) ?*struct_lattr_db;
pub extern fn lattr_get(db: ?*struct_lattr_db, y: [*c]struct_high_syntax, p: [*c]P, line: ptrdiff_t) HIGHLIGHT_STATE;
pub extern fn parse(syntax: [*c]struct_high_syntax, line: [*c]P, state: HIGHLIGHT_STATE, charmap: [*c]struct_charmap) HIGHLIGHT_STATE;
pub extern fn my_iconv1(dest: [*c]u8, destsiz: ptrdiff_t, dest_map: [*c]struct_charmap, s: [*c]const u8) void;
pub extern fn simplify_prefix(path: [*c]const u8) [*c]u8;
pub extern fn get_status(bw: [*c]BW, s: [*c]u8) [*c]const u8;
pub extern fn markv(r: c_int) c_int;
pub extern fn genexmsg(bw: [*c]BW, saved: c_int, name: [*c]u8) void;
pub extern fn okrepl(bw: [*c]BW) c_int;
pub extern fn yncheck(string: [*c]const u8, c: c_int) c_int;
pub extern fn joe_wcwidth(wide: c_int, c: c_int) c_int;
pub extern fn ukillpid(w: [*c]W, k: c_int) c_int;
pub extern fn my_gettext(s: [*c]const u8) [*c]const u8;
pub extern fn mkqw(w: [*c]W, prompt: [*c]const u8, len: ptrdiff_t, func: ?*const fn (w: [*c]W, k: c_int, object: ?*anyopaque, notify: [*c]c_int) callconv(.c) c_int, abrt: ?*const fn (w: [*c]W, object: ?*anyopaque) callconv(.c) c_int, object: ?*anyopaque, notify: [*c]c_int) ?*QW;
pub extern fn time(t: [*c]time_t) time_t;
pub extern fn localtime(t: [*c]const time_t) [*c]struct_tm;
pub extern fn ctime(t: [*c]const time_t) [*c]u8;
pub extern var skiptop: c_int;
pub extern var dostaupd: c_int;
pub extern var leave: c_int;
pub extern var maint: [*c]Screen;
pub extern var errbuf: [*c]B;
pub extern var stdbuf: [gap_types.stdsiz]u8;
pub extern var locale_map: [*c]struct_charmap;
pub extern var recmac: [*c]struct_recmac;
pub extern var markb: [*c]P;
pub extern var markk: [*c]P;
pub extern var exmsg: [*c]u8;
pub extern var have: c_int;
pub extern var square: c_int;
pub extern var yes_key: [*c]const u8;
pub extern var watomtw: WATOM;
pub extern fn rtntw(w: [*c]W) c_int;
pub extern fn utypew(w: [*c]W, k: c_int) c_int;
pub extern fn msetI(dest: [*c]c_int, c: c_int, sz: ptrdiff_t) [*c]c_int;
pub extern fn zdup(s: [*c]const u8) [*c]u8;
pub extern fn dirprt(path: [*c]const u8) [*c]u8;
pub extern fn canonical(s: [*c]u8, flags: c_int) [*c]u8;
pub extern fn brvs(p: [*c]P, size: off_t) [*c]u8;
pub extern fn brc(p: [*c]P) c_int;
pub extern fn pgetc(p: [*c]P) c_int;
pub extern fn prgetc(p: [*c]P) c_int;
pub extern fn p_goto_eol(p: [*c]P) void;
pub extern fn p_goto_eof(p: [*c]P) void;
pub extern fn pnextl(p: [*c]P) c_int;
pub extern fn bmk(prop: [*c]B) [*c]B;
pub extern fn bcpy(from: [*c]P, to: [*c]P) [*c]B;
pub extern fn bdel(from: [*c]P, to: [*c]P) void;
pub extern fn binsb(p: [*c]P, b: [*c]B) void;
pub extern fn binsc(p: [*c]P, c: c_int) void;
pub extern fn binsm(p: [*c]P, blk: [*c]const u8, size: ptrdiff_t) void;
pub extern fn binsmq(p: [*c]P, blk: [*c]const u8, size: ptrdiff_t) void;
pub extern fn vaadd(vary: [*c][*c]u8, element: [*c]u8) [*c][*c]u8;
pub extern fn varm(vary: [*c][*c]u8) void;
pub extern fn rmatch(pattern: [*c]const u8, s: [*c]const u8) c_int;
pub extern fn isreg(s: [*c]const u8) c_int;
pub extern fn cmplt_file(bw: [*c]BW, k: c_int) c_int;
pub extern fn mkmenu(loc: [*c]W, targ: [*c]W, s: [*c][*c]u8, func: ?*const fn (m: [*c]MENU, cursor: ptrdiff_t, object: ?*anyopaque, k: c_int) callconv(.c) c_int, abrt: ?*const fn (w: [*c]W, cursor: ptrdiff_t, object: ?*anyopaque) callconv(.c) c_int, backs: ?*const fn (m: [*c]MENU, cursor: ptrdiff_t, object: ?*anyopaque) callconv(.c) c_int, cursor: ptrdiff_t, object: ?*anyopaque, notify: [*c]c_int) [*c]MENU;
pub extern fn mcomplete(m: [*c]MENU) [*c]u8;
pub extern fn bwfllwt(w: [*c]W) void;
pub extern fn ttflsh() void;
pub extern var obufp: ptrdiff_t;
pub extern var obufsiz: ptrdiff_t;
pub extern var obuf: [*c]u8;
pub extern var smode: c_int;
pub extern var menu_above: c_int;
pub extern var menu_jump: c_int;
pub extern var watommenu: WATOM;
pub fn disppw(arg_w: [*c]W, arg_flg: c_int) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var flg = arg_flg;
    _ = &flg;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    var pw_2: [*c]PW = @ptrCast(@alignCast(bw_1.*.object));
    _ = &pw_2;
    if (!(flg != 0)) {
        return;
    }
    if (pw_2.*.promptlen > (w.*.w - @as(ptrdiff_t, 5))) {
        pw_2.*.promptofst = pw_2.*.promptlen - @divTrunc(w.*.w, @as(ptrdiff_t, 2));
        if (piscol(bw_1.*.cursor) < @as(off_t, w.*.w - (pw_2.*.promptlen - pw_2.*.promptofst))) {
            bw_1.*.offset = 0;
        } else {
            bw_1.*.offset = piscol(bw_1.*.cursor) - @as(off_t, (w.*.w - (pw_2.*.promptlen - pw_2.*.promptofst)) - @as(ptrdiff_t, 1));
        }
    } else {
        if (piscol(bw_1.*.cursor) < @as(off_t, w.*.w - pw_2.*.promptlen)) {
            pw_2.*.promptofst = 0;
            bw_1.*.offset = 0;
        } else if (piscol(bw_1.*.cursor) >= @as(off_t, w.*.w)) {
            pw_2.*.promptofst = pw_2.*.promptlen;
            bw_1.*.offset = piscol(bw_1.*.cursor) - @as(off_t, w.*.w - @as(ptrdiff_t, 1));
        } else {
            pw_2.*.promptofst = pw_2.*.promptlen - @as(ptrdiff_t, @truncate((@as(off_t, w.*.w) - piscol(bw_1.*.cursor)) - @as(off_t, 1)));
            bw_1.*.offset = piscol(bw_1.*.cursor) - @as(off_t, (w.*.w - (pw_2.*.promptlen - pw_2.*.promptofst)) - @as(ptrdiff_t, 1));
        }
    }
    w.*.curx = @as(ptrdiff_t, @truncate(((piscol(bw_1.*.cursor) - bw_1.*.offset) + @as(off_t, pw_2.*.promptlen)) - @as(off_t, pw_2.*.promptofst)));
    w.*.cury = 0;
    w.*.t.*.t.*.updtab[@bitCast(@as(isize, @intCast(w.*.y)))] = 1;
    genfmt(w.*.t.*.t, w.*.x, w.*.y, pw_2.*.promptofst, pw_2.*.prompt, bg_prompt, 0, 0);
    bwmove(bw_1, (w.*.x + pw_2.*.promptlen) - pw_2.*.promptofst, w.*.y);
    bwresz(bw_1, w.*.w - (pw_2.*.promptlen - pw_2.*.promptofst), 1);
    bwgen(bw_1, 0, 0);
}
pub fn rtnpw(arg_w: [*c]W) callconv(.c) c_int {
    var w = arg_w;
    _ = &w;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    var pw_2: [*c]PW = @ptrCast(@alignCast(bw_1.*.object));
    _ = &pw_2;
    var s: [*c]u8 = undefined;
    _ = &s;
    var win: [*c]W = undefined;
    _ = &win;
    var notify: [*c]c_int = undefined;
    _ = &notify;
    var pfunc: ?*const fn (w: [*c]W, s: [*c]u8, object: ?*anyopaque, notify: [*c]c_int) callconv(.c) c_int = undefined;
    _ = &pfunc;
    var object: ?*anyopaque = undefined;
    _ = &object;
    var byte: off_t = undefined;
    _ = &byte;
    p_goto_eol(bw_1.*.cursor);
    byte = bw_1.*.cursor.*.byte;
    p_goto_bol(bw_1.*.cursor);
    s = brvs(bw_1.*.cursor, byte - bw_1.*.cursor.*.byte);
    if ((pw_2.*.file_prompt & PWFLAG_FILENAME) != 0) {
        s = canonical(s, 0);
    } else if ((pw_2.*.file_prompt & PWFLAG_COMMAND) != 0) {
        s = canonical(s, CANFLAG_NORESTART);
    }
    if (pw_2.*.hist != null) {
        if (bw_1.*.b.*.changed != 0) {
            append_history(pw_2.*.hist, s, if (s != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(s))) - @as(usize, @bitCast(@as(isize, @intCast(@as(c_int, 1)))))).* else @as(ptrdiff_t, 0));
        } else {
            promote_history(pw_2.*.hist, bw_1.*.cursor.*.line);
        }
    }
    if ((pw_2.*.file_prompt & PWFLAG_UPDATE_CD) != 0) {
        set_current_dir(bw_1, s, 1);
    }
    win = w.*.win;
    pfunc = pw_2.*.pfunc;
    object = pw_2.*.object;
    bwrm(bw_1);
    joe_free(@ptrCast(@alignCast(pw_2.*.prompt)));
    joe_free(@ptrCast(@alignCast(pw_2)));
    w.*.object = null;
    notify = w.*.notify;
    w.*.notify = null;
    _ = wabort(w);
    dostaupd = 1;
    if (pfunc != null) {
        return pfunc.?(win, s, object, notify);
    } else {
        return -@as(c_int, 1);
    }
}
pub fn inspw(arg_w: [*c]W, arg_b_1: [*c]B, arg_l: off_t, arg_n: off_t, arg_flg: c_int) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var b_1 = arg_b_1;
    _ = &b_1;
    var l = arg_l;
    _ = &l;
    var n = arg_n;
    _ = &n;
    var flg = arg_flg;
    _ = &flg;
    var bw_2: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_2;
    if (b_1 == bw_2.*.b) {
        bwins(bw_2, l, n, flg);
    }
}
pub fn delpw(arg_w: [*c]W, arg_b_1: [*c]B, arg_l: off_t, arg_n: off_t, arg_flg: c_int) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var b_1 = arg_b_1;
    _ = &b_1;
    var l = arg_l;
    _ = &l;
    var n = arg_n;
    _ = &n;
    var flg = arg_flg;
    _ = &flg;
    var bw_2: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_2;
    if (b_1 == bw_2.*.b) {
        bwdel(bw_2, l, n, flg);
    }
}
pub fn abortpw(arg_w: [*c]W) callconv(.c) c_int {
    var w = arg_w;
    _ = &w;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    var pw_2: [*c]PW = @ptrCast(@alignCast(bw_1.*.object));
    _ = &pw_2;
    var object: ?*anyopaque = pw_2.*.object;
    _ = &object;
    var abrt: ?*const fn (w: [*c]W, object: ?*anyopaque) callconv(.c) c_int = pw_2.*.abrt;
    _ = &abrt;
    var win: [*c]W = bw_1.*.parent.*.win;
    _ = &win;
    bwrm(bw_1);
    joe_free(@ptrCast(@alignCast(pw_2.*.prompt)));
    joe_free(@ptrCast(@alignCast(pw_2)));
    if (abrt != null) {
        return abrt.?(win, object);
    } else {
        return -@as(c_int, 1);
    }
}
pub fn p_goto_bow(arg_ptr: [*c]P) callconv(.c) void {
    var ptr = arg_ptr;
    _ = &ptr;
    var map: [*c]struct_charmap = ptr.*.b.*.o.charmap;
    _ = &map;
    var c: c_int = undefined;
    _ = &c;
    while (map.*.is_alnum_.?(map, blk: {
        const tmp = prgetc(ptr);
        c = tmp;
        break :blk tmp;
    }) != 0) {}
    if (c != -@as(c_int, 256)) {
        _ = pgetc(ptr);
    }
}
pub fn p_goto_eow(arg_ptr: [*c]P) callconv(.c) void {
    var ptr = arg_ptr;
    _ = &ptr;
    var map: [*c]struct_charmap = ptr.*.b.*.o.charmap;
    _ = &map;
    while (map.*.is_alnum_.?(map, brch(ptr)) != 0) {
        _ = pgetc(ptr);
    }
}
pub fn word_ins(arg_bw_1: [*c]BW, arg_line: [*c]u8) callconv(.c) void {
    var bw_1 = arg_bw_1;
    _ = &bw_1;
    var line = arg_line;
    _ = &line;
    var p_2: [*c]P = pdup(bw_1.*.cursor, "cmplt_ins");
    _ = &p_2;
    p_goto_bow(p_2);
    p_goto_eow(bw_1.*.cursor);
    bdel(p_2, bw_1.*.cursor);
    binsm(bw_1.*.cursor, line, if (line != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(line))) - @as(usize, @bitCast(@as(isize, @intCast(@as(c_int, 1)))))).* else @as(ptrdiff_t, 0));
    p_goto_eol(bw_1.*.cursor);
    prm(p_2);
    bw_1.*.cursor.*.xcol = piscol(bw_1.*.cursor);
}
pub fn word_rtn(arg_m: [*c]MENU, arg_x: ptrdiff_t, arg_object: ?*anyopaque, arg_k: c_int) callconv(.c) c_int {
    var m = arg_m;
    _ = &m;
    var x = arg_x;
    _ = &x;
    var object = arg_object;
    _ = &object;
    var k = arg_k;
    _ = &k;
    var line: [*c]u8 = @ptrCast(@alignCast(object));
    _ = &line;
    word_ins(@ptrCast(@alignCast(m.*.parent.*.win.*.object)), m.*.list[@bitCast(@as(isize, @intCast(x)))]);
    vsrm(line);
    m.*.object = null;
    _ = wabort(m.*.parent);
    return 0;
}
